Add ~amd64, wrt bug #439190
Package-Manager: portage-2.1.11.9/cvs/Linux x86_64

--- a/app-mobilephone/linuxsms/ChangeLog
+++ b/app-mobilephone/linuxsms/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-mobilephone/linuxsms
 # Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/linuxsms/ChangeLog,v 1.2 2012/10/22 13:49:54 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/linuxsms/ChangeLog,v 1.3 2012/10/22 13:50:26 ago Exp $
+
+  22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> linuxsms-0.77.ebuild:
+  Add ~amd64, wrt bug #439190
 
   22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> linuxsms-0.77.ebuild:
   EAPI4
