--- a/net-misc/wget/ChangeLog
+++ b/net-misc/wget/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/wget
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.166 2012/10/20 16:14:20 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.167 2012/10/22 14:46:32 ago Exp $
+
+  22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> wget-1.14.ebuild:
+  Stable for AMD64, wrt bug #438858
 
   20 Oct 2012; Jeroen Roovers <jer@gentoo.org> wget-1.14.ebuild:
   Stable for HPPA (bug #438858).
