--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7050 2012/10/22 12:21:47 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7051 2012/10/22 15:53:28 tetromino Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  22 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  targets/desktop/package.use:
+  remove wine[udisks] from targets/desktop/package.use since udisks is in USE
+  in targets/desktop/make.defaults. Thanks to Samuli Suominen.
 
   22 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> package.mask:
   Mask net-misc/libteam snapshot ebuilds until release
