--- a/net-misc/wget/ChangeLog
+++ b/net-misc/wget/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/wget
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.167 2012/10/22 14:46:32 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.168 2012/10/22 18:26:06 xmw Exp $
+
+  22 Oct 2012; Michael Weber <xmw@gentoo.org> wget-1.14.ebuild:
+  ppc stable (bug 438858)
 
   22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> wget-1.14.ebuild:
   Stable for AMD64, wrt bug #438858
