--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.221 2012/10/21 23:51:06 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.222 2012/10/22 19:03:27 cardoe Exp $
+
+  22 Oct 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.10.2.ebuild,
+  -libvirt-0.10.2-r1.ebuild:
+  Remove older ebuilds
 
 *libvirt-0.10.2-r2 (21 Oct 2012)
 
