--- a/app-office/skrooge/ChangeLog
+++ b/app-office/skrooge/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/skrooge
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/skrooge/ChangeLog,v 1.30 2012/09/04 08:50:57 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/skrooge/ChangeLog,v 1.31 2012/10/22 19:37:06 ago Exp $
+
+  22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> skrooge-1.3.3.ebuild:
+  Stable for amd64, wrt bug #438568
 
 *skrooge-1.3.3 (04 Sep 2012)
 
