--- a/app-office/skrooge/ChangeLog
+++ b/app-office/skrooge/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/skrooge
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/skrooge/ChangeLog,v 1.32 2012/10/22 19:37:39 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/skrooge/ChangeLog,v 1.33 2012/10/22 19:54:31 johu Exp $
+
+  22 Oct 2012; Johannes Huber <johu@gentoo.org> -skrooge-1.3.0.ebuild:
+  Remove old.
 
   22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> skrooge-1.3.3.ebuild:
   Stable for x86, wrt bug #438568
