--- a/sys-kernel/gentoo-sources/ChangeLog
+++ b/sys-kernel/gentoo-sources/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1026 2012/10/22 10:41:48 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1027 2012/10/22 23:07:34 jer Exp $
+
+  22 Oct 2012; Jeroen Roovers <jer@gentoo.org> gentoo-sources-3.5.7.ebuild:
+  Stable for HPPA (bug #438798).
 
   22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gentoo-sources-3.5.7.ebuild:
   Stable for X86, wrt bug #432426
