--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1066 2012/10/22 10:42:44 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1067 2012/10/22 23:08:05 jer Exp $
+
+  22 Oct 2012; Jeroen Roovers <jer@gentoo.org> vanilla-sources-3.5.7.ebuild:
+  Stable for HPPA (bug #438798).
 
   22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> vanilla-sources-3.5.7.ebuild:
   Stable for X86, wrt bug #432426
