--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7051 2012/10/22 15:53:28 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7052 2012/10/23 00:08:05 jer Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  23 Oct 2012; Jeroen Roovers <jer@gentoo.org> profiles.desc:
+  Remove deprecated desktop profiles.
 
   22 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   targets/desktop/package.use:
