--- a/net-proxy/squid/ChangeLog
+++ b/net-proxy/squid/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-proxy/squid
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/squid/ChangeLog,v 1.355 2012/10/14 20:08:17 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/squid/ChangeLog,v 1.356 2012/10/23 06:55:06 eras Exp $
+
+*squid-3.2.3 (23 Oct 2012)
+
+  23 Oct 2012; Eray Aslan <eras@gentoo.org> +squid-3.2.3.ebuild:
+  Version bump - bug #439142
 
   14 Oct 2012; Markus Meier <maekke@gentoo.org> squid-3.2.2.ebuild:
   add ~arm, bug #432974
