--- a/net-libs/libtrace/ChangeLog
+++ b/net-libs/libtrace/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/libtrace
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libtrace/ChangeLog,v 1.2 2012/10/15 16:04:30 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libtrace/ChangeLog,v 1.3 2012/10/23 06:59:15 radhermit Exp $
+
+  23 Oct 2012; Tim Harder <radhermit@gentoo.org> libtrace-3.0.15.ebuild,
+  +files/libtrace-3.0.15-no-doxygen.patch:
+  Use prune_libtool_files, properly skip rebuilding docs when doxygen is
+  present, and bump to EAPI 5.
 
 *libtrace-3.0.15 (15 Oct 2012)
 
