--- a/net-proxy/squid/ChangeLog
+++ b/net-proxy/squid/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-proxy/squid
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/squid/ChangeLog,v 1.356 2012/10/23 06:55:06 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/squid/ChangeLog,v 1.357 2012/10/23 07:01:47 eras Exp $
+
+  23 Oct 2012; Eray Aslan <eras@gentoo.org> +files/squid.initd-logrotate-r1,
+  +files/squid.initd-r1, squid-3.2.3.ebuild:
+  Init script: need net -> use net
 
 *squid-3.2.3 (23 Oct 2012)
 
