--- a/mail-mta/postfix/ChangeLog
+++ b/mail-mta/postfix/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for mail-mta/postfix
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.393 2012/10/23 05:25:54 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.394 2012/10/23 07:44:28 eras Exp $
+
+*postfix-2.10_pre20121022 (23 Oct 2012)
+
+  23 Oct 2012; Eray Aslan <eras@gentoo.org> +postfix-2.10_pre20121022.ebuild,
+  -postfix-2.10_pre20121007.ebuild:
+  Version bump
 
   23 Oct 2012; Eray Aslan <eras@gentoo.org> postfix-2.9.4.ebuild:
   Revert accidental unstable for amd64 ppc ppc64 - bug #437602
