--- a/media-plugins/gst-plugins-v4l2/ChangeLog
+++ b/media-plugins/gst-plugins-v4l2/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for media-plugins/gst-plugins-v4l2
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-v4l2/ChangeLog,v 1.90 2011/10/15 18:35:18 xarthisius Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-v4l2/ChangeLog,v 1.91 2012/10/23 07:58:04 tetromino Exp $
+
+*gst-plugins-v4l2-0.10.31 (23 Oct 2012)
+
+  23 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  +gst-plugins-v4l2-0.10.31.ebuild,
+  +files/gst-plugins-v4l2-0.10.31-linux-headers-3.6.patch:
+  Bump, improves error handling, fixes various bugs. Fix build failure with
+  recent linux-headers (bug #437012, thanks to Jason Lamb et al.)
 
   15 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
   gst-plugins-v4l2-0.10.30.ebuild:
