--- a/sys-apps/debianutils/ChangeLog
+++ b/sys-apps/debianutils/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/debianutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.181 2012/08/26 17:30:20 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.182 2012/10/23 08:03:17 radhermit Exp $
+
+*debianutils-4.3.4 (23 Oct 2012)
+
+  23 Oct 2012; Tim Harder <radhermit@gentoo.org> +debianutils-4.3.4.ebuild:
+  Version bump.
 
   26 Aug 2012; Raúl Porcel <armin76@gentoo.org> debianutils-4.3.2.ebuild:
   alpha/ia64/m68k/s390/sh/sparc stable wrt #429194
