--- a/sys-apps/debianutils/ChangeLog
+++ b/sys-apps/debianutils/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/debianutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.182 2012/10/23 08:03:17 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.183 2012/10/23 08:06:55 radhermit Exp $
+
+  23 Oct 2012; Tim Harder <radhermit@gentoo.org> -debianutils-3.4.4.ebuild,
+  -debianutils-4.1.ebuild, -debianutils-4.2.1.ebuild,
+  -debianutils-4.2.2.ebuild, -debianutils-4.3.ebuild,
+  -debianutils-4.3.1.ebuild:
+  Remove old.
 
 *debianutils-4.3.4 (23 Oct 2012)
 
