--- a/app-forensics/sleuthkit/ChangeLog
+++ b/app-forensics/sleuthkit/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-forensics/sleuthkit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/sleuthkit/ChangeLog,v 1.63 2012/07/03 20:20:58 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/sleuthkit/ChangeLog,v 1.64 2012/10/23 09:09:24 radhermit Exp $
+
+*sleuthkit-4.0.0 (23 Oct 2012)
+
+  23 Oct 2012; Tim Harder <radhermit@gentoo.org> +sleuthkit-4.0.0.ebuild,
+  +files/sleuthkit-4.0.0-system-sqlite.patch:
+  Version bump.
 
   03 Jul 2012; Tim Harder <radhermit@gentoo.org> -sleuthkit-3.2.1.ebuild:
   Remove old.
