--- a/media-video/libav/ChangeLog
+++ b/media-video/libav/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-video/libav
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.103 2012/09/20 12:26:09 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.104 2012/10/23 14:45:51 lu_zero Exp $
+
+*libav-0.8.4 (23 Oct 2012)
+
+  23 Oct 2012; Luca Barbato <lu_zero@gentoo.org>
+  +files/0001-svq3-replace-unsafe-pointer-casting-with-intreadwrit.patch,
+  +libav-0.8.4.ebuild, libav-9999.ebuild:
+  New version
 
   20 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> libav-0.8.3.ebuild:
   ppc64 stable wrt #422537
