--- a/app-admin/usbview/ChangeLog
+++ b/app-admin/usbview/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/usbview
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/usbview/ChangeLog,v 1.37 2012/10/23 07:06:31 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/usbview/ChangeLog,v 1.38 2012/10/23 15:56:20 ssuominen Exp $
+
+  23 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> usbview-2.0.ebuild:
+  Ensure CONFIG_DEBUG_FS is enabled for /sys/kernel/debug/usb/devices.
 
   23 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> usbview-2.0.ebuild:
   Remove pointless doman line since Makefile.am is handling manpage
