--- a/media-video/libav/ChangeLog
+++ b/media-video/libav/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/libav
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.104 2012/10/23 14:45:51 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.105 2012/10/23 17:36:10 lu_zero Exp $
+
+  23 Oct 2012; Luca Barbato <lu_zero@gentoo.org> libav-0.8.4.ebuild,
+  libav-9999.ebuild:
+  Mark cdio as gpl
 
 *libav-0.8.4 (23 Oct 2012)
 
