--- a/sys-process/parallel/ChangeLog
+++ b/sys-process/parallel/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-process/parallel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/parallel/ChangeLog,v 1.32 2012/09/23 08:18:27 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/parallel/ChangeLog,v 1.33 2012/10/23 19:09:27 radhermit Exp $
+
+*parallel-20121022 (23 Oct 2012)
+
+  23 Oct 2012; Tim Harder <radhermit@gentoo.org> +parallel-20121022.ebuild:
+  Version bump.
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   parallel-20120622.ebuild:
