--- a/sys-process/parallel/ChangeLog
+++ b/sys-process/parallel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-process/parallel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/parallel/ChangeLog,v 1.33 2012/10/23 19:09:27 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/parallel/ChangeLog,v 1.34 2012/10/23 19:09:58 radhermit Exp $
+
+  23 Oct 2012; Tim Harder <radhermit@gentoo.org> -parallel-20120522.ebuild:
+  Remove old.
 
 *parallel-20121022 (23 Oct 2012)
 
