--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.459 2012/10/23 08:09:35 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.460 2012/10/23 20:32:51 eva Exp $
+
+  23 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> gnome2-utils.eclass,
+  gnome2.eclass:
+  Add gnome2_disable_deprecation_warning to gnome2-utils.eclass
 
   23 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   gst-plugins-base.eclass:
