prune_libtool_files(): fix variable reuse. Thanks to radhermit for the patch.

--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.461 2012/10/23 20:58:05 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.462 2012/10/23 21:09:39 mgorny Exp $
+
+  23 Oct 2012; Michał Górny <mgorny@gentoo.org> eutils.eclass:
+  prune_libtool_files(): fix variable reuse. Thanks to radhermit for the patch.
 
   23 Oct 2012; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass,
   python-r1.eclass:
