--- a/sys-libs/libfaketime/ChangeLog
+++ b/sys-libs/libfaketime/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/libfaketime
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libfaketime/ChangeLog,v 1.2 2012/02/27 23:54:08 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libfaketime/ChangeLog,v 1.3 2012/10/23 22:26:58 radhermit Exp $
+
+*libfaketime-0.9.1 (23 Oct 2012)
+
+  23 Oct 2012; Tim Harder <radhermit@gentoo.org> +libfaketime-0.9.1.ebuild,
+  +files/libfaketime-0.9.1-makefile.patch:
+  Version bump.
 
 *libfaketime-0.9-r1 (27 Feb 2012)
 
