--- a/media-libs/libextractor/ChangeLog
+++ b/media-libs/libextractor/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libextractor
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.79 2012/10/16 21:48:19 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.80 2012/10/24 07:24:03 ssuominen Exp $
+
+*libextractor-1.0.1 (24 Oct 2012)
+
+  24 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  +libextractor-1.0.1.ebuild:
+  Version bump.
 
   16 Oct 2012; Markus Meier <maekke@gentoo.org> libextractor-1.0.0.ebuild:
   add ~arm, bug #436954
