--- a/media-libs/libextractor/ChangeLog
+++ b/media-libs/libextractor/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libextractor
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.80 2012/10/24 07:24:03 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.81 2012/10/24 07:46:28 ssuominen Exp $
+
+  24 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  libextractor-1.0.1.ebuild:
+  Fix LICENSE from GPL-2 to GPL-3 as per COPYING and NEWS.
 
 *libextractor-1.0.1 (24 Oct 2012)
 
