--- a/app-crypt/libsecret/ChangeLog
+++ b/app-crypt/libsecret/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/libsecret
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/libsecret/ChangeLog,v 1.2 2012/10/24 08:01:30 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/libsecret/ChangeLog,v 1.3 2012/10/24 08:09:42 tetromino Exp $
+
+  24 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  libsecret-0.11.ebuild:
+  G2CONF usage fix.
 
 *libsecret-0.11 (24 Oct 2012)
 
