--- a/dev-util/eric/ChangeLog
+++ b/dev-util/eric/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/eric
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.183 2012/10/20 10:13:20 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.184 2012/10/24 09:54:42 ago Exp $
+
+  24 Oct 2012; Agostino Sarubbo <ago@gentoo.org> eric-4.5.6.ebuild:
+  Stable for amd64, wrt bug #439046
 
 *eric-4.5.7 (20 Oct 2012)
 *eric-5.2.6 (20 Oct 2012)
