--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7055 2012/10/23 22:47:17 zorry Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7056 2012/10/24 11:16:53 yngwin Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  24 Oct 2012; Ben de Groot <yngwin@gentoo.org> package.mask:
+  Temp mask of new razorqt-0.5.1 release
 
   23 Oct 2012; Magnus Granberg <zorry@gentoo.org> hardened/linux/use.mask:
   mask orc use flag for it is jit.
