--- a/media-video/smplayer/ChangeLog
+++ b/media-video/smplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/smplayer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer/ChangeLog,v 1.120 2012/10/24 11:58:13 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer/ChangeLog,v 1.121 2012/10/24 11:58:51 ago Exp $
+
+  24 Oct 2012; Agostino Sarubbo <ago@gentoo.org> smplayer-0.8.1.ebuild:
+  Stable for amd64, wrt bug #439258
 
   24 Oct 2012; Agostino Sarubbo <ago@gentoo.org> smplayer-0.8.1.ebuild:
   Stable for x86, wrt bug #439258
