--- a/app-arch/rpm/ChangeLog
+++ b/app-arch/rpm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/rpm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.160 2012/10/14 17:40:46 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.161 2012/10/24 13:32:36 scarabeus Exp $
+
+  24 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> -rpm-4.9.1.3.ebuild:
+  Punt 4.9.1 as 4.10.0 is stable everywhere.
 
   14 Oct 2012; Raúl Porcel <armin76@gentoo.org> rpm-4.10.0.ebuild:
   alpha/ia64/s390/sh/sparc stable wrt #428148
