--- a/app-arch/rpm/ChangeLog
+++ b/app-arch/rpm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-arch/rpm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.161 2012/10/24 13:32:36 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.162 2012/10/24 13:39:52 scarabeus Exp $
+
+*rpm-4.10.1 (24 Oct 2012)
+
+  24 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +rpm-4.10.1.ebuild,
+  metadata.xml:
+  Version bump. Add also lovely suse herd here.
 
   24 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> -rpm-4.9.1.3.ebuild:
   Punt 4.9.1 as 4.10.0 is stable everywhere.
