Add some boring debug prints and error+die when hunspell folder is symlink. Should fix bug#438792.

--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.462 2012/10/23 21:09:39 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.463 2012/10/24 14:44:40 scarabeus Exp $
+
+  24 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> myspell-r2.eclass:
+  Add some boring debug prints and error+die when hunspell folder is symlink.
+  Should fix bug#438792.
 
   23 Oct 2012; Michał Górny <mgorny@gentoo.org> eutils.eclass:
   prune_libtool_files(): fix variable reuse. Thanks to radhermit for the patch.
