--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7058 2012/10/24 16:05:27 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7059 2012/10/24 19:51:35 ulm Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  24 Oct 2012; Ulrich Müller <ulm@gentoo.org> updates/4Q-2012:
+  Package move x11-libs/openmotif to x11-libs/motif.
 
   24 Oct 2012; Ben de Groot <yngwin@gentoo.org> package.mask:
   Remove temp mask for razorqt-0.5.1
