--- a/media-libs/raspberrypi-userland/ChangeLog
+++ b/media-libs/raspberrypi-userland/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/raspberrypi-userland
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/raspberrypi-userland/ChangeLog,v 1.1 2012/10/25 01:04:25 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/raspberrypi-userland/ChangeLog,v 1.2 2012/10/25 01:10:45 chithanh Exp $
+
+  25 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  raspberrypi-userland-0_pre20121024.ebuild:
+  Make description more precise.
 
 *raspberrypi-userland-0_pre20121024 (25 Oct 2012)
 
