--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.464 2012/10/24 18:55:30 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.465 2012/10/25 12:48:58 scarabeus Exp $
+
+  25 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> cmake-utils.eclass:
+  Include fix for bug#439268.
 
   24 Oct 2012; Ulrich Müller <ulm@gentoo.org> vim.eclass:
   Update dependency after package move from x11-libs/openmotif to
