--- a/sys-fs/bashmount/ChangeLog
+++ b/sys-fs/bashmount/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/bashmount
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/bashmount/ChangeLog,v 1.11 2012/10/25 10:33:24 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/bashmount/ChangeLog,v 1.12 2012/10/25 13:14:16 ssuominen Exp $
+
+  25 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> -bashmount-1.6.0.ebuild:
+  old
 
   25 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
   Push to maintainer-needed@
