--- a/sys-apps/flashrom/ChangeLog
+++ b/sys-apps/flashrom/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/flashrom
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/flashrom/ChangeLog,v 1.26 2012/08/03 19:32:48 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/flashrom/ChangeLog,v 1.27 2012/10/25 14:27:18 blueness Exp $
+
+  25 Oct 2012; Anthony G. Basile <blueness@gentoo.org> flashrom-0.9.6.ebuild:
+  stable arm, bug #439552
 
 *flashrom-0.9.6 (03 Aug 2012)
 
@@ -119,4 +122,3 @@
   erasing flash ROM chips. It's used to flash BIOS/coreboot/firmware images.
   Roughly based on ebuilds from Peter Stuge and Christian Ruppert. Closes bug
   196945
-
