--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7061 2012/10/25 16:06:42 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7062 2012/10/25 16:45:30 hwoarang Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  25 Oct 2012; Markos Chandras <hwoarang@gentoo.org> package.mask:
+  Remove pf-sources that are affected by the ext4 bug
 
   25 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   hardened/linux/uclibc/make.defaults, hardened/linux/uclibc/use.mask:
