--- a/dev-vcs/subversion/ChangeLog
+++ b/dev-vcs/subversion/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-vcs/subversion
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.83 2012/09/03 19:25:39 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.84 2012/10/25 17:04:23 tommy Exp $
+
+  25 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  subversion-1.7.6.ebuild:
+  Drop dodoc on notes/*, since that does not exist any more
 
   03 Sep 2012; Fabian Groffen <grobian@gentoo.org> subversion-1.7.6.ebuild:
   Fix linking on Solaris with USE=nls
