--- a/dev-vcs/subversion/ChangeLog
+++ b/dev-vcs/subversion/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-vcs/subversion
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.84 2012/10/25 17:04:23 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.85 2012/10/25 17:07:41 tommy Exp $
+
+*subversion-1.7.7 (25 Oct 2012)
+
+  25 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  -subversion-1.7.0.ebuild, -subversion-1.7.1.ebuild, -subversion-1.7.2.ebuild,
+  -subversion-1.7.4.ebuild, -subversion-1.7.5.ebuild, +subversion-1.7.7.ebuild:
+  Version bump, fixes bug 439362, drop old versions
 
   25 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   subversion-1.7.6.ebuild:
