--- a/app-misc/tracker/ChangeLog
+++ b/app-misc/tracker/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/tracker
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/tracker/ChangeLog,v 1.133 2012/10/25 07:56:27 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/tracker/ChangeLog,v 1.134 2012/10/25 18:40:42 eva Exp $
+
+  25 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> -tracker-0.10.35.ebuild,
+  -tracker-0.12.10.ebuild, tracker-0.12.10-r1.ebuild, tracker-0.14.2-r1.ebuild,
+  tracker-0.14.3.ebuild, metadata.xml:
+  Add missing gstreamer slots. Drop unused local USE flag descriptions.
 
 *tracker-0.14.3 (25 Oct 2012)
 
