--- a/net-libs/libnetfilter_conntrack/ChangeLog
+++ b/net-libs/libnetfilter_conntrack/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libnetfilter_conntrack
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnetfilter_conntrack/ChangeLog,v 1.51 2012/10/23 12:42:50 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnetfilter_conntrack/ChangeLog,v 1.52 2012/10/26 01:32:08 blueness Exp $
+
+  26 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  libnetfilter_conntrack-1.0.2.ebuild:
+  keyword ~ppc64, bug #432974
 
 *libnetfilter_conntrack-1.0.2 (23 Oct 2012)
 
