Fix udev dep, once and for all.
Package-Manager: portage-2.2.0_alpha141/cvs/Linux x86_64
Manifest-Sign-Key: 0x42B9401D

--- a/sys-apps/systemd/ChangeLog
+++ b/sys-apps/systemd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/systemd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.57 2012/10/26 21:27:16 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.58 2012/10/26 21:34:56 mgorny Exp $
+
+  26 Oct 2012; Michał Górny <mgorny@gentoo.org> systemd-195.ebuild:
+  Fix udev dep, once and for all.
 
 *systemd-195 (26 Oct 2012)
 
