Remove duplicate documentation for BUILD_DIR, PYTHON, and EPYTHON. This breaks eclass-manpages.

--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.469 2012/10/26 21:38:47 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.470 2012/10/27 01:14:38 floppym Exp $
+
+  27 Oct 2012; Mike Gilbert <floppym@gentoo.org> python-r1.eclass:
+  Remove duplicate documentation for BUILD_DIR, PYTHON, and EPYTHON. This
+  breaks eclass-manpages.
 
   26 Oct 2012; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass,
   python-r1.eclass:
